# curio_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Channels.msg  CurioImu.msg  CurioServoCommands.msg  CurioServoPositions.msg  CurioServoStatus.msg  CurioState.msg  LX16AState.msg
