<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>curio_msgs</name>
  <version>0.2.1</version>
  <description>Messages for Curio in ROS2, a Sawppy Rover</description>
  <maintainer email="manolofc@gmail.com">Manuel Fernández</maintainer>
  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/srmainwaring/curio_msgs</url>
  <url type="repository">https://github.com/srmainwaring/curio_msgs</url>
  <url type="bugtracker">https://github.com/srmainwaring/curio_msgs/issues</url>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
